Start Navier-Stokes equations

--- a/exam_prep/main.tex
+++ b/exam_prep/main.tex
@@ -52,6 +52,8 @@
 \author{August Femtehjell}
 \date{Spring 2025}
 
+\includeonly{question_5}
+
 \begin{document}
 
 \maketitle
@@ -72,5 +74,7 @@
 \include{question_3}
 
 \include{question_4}
+
+\include{question_5}
 
 \end{document}
