Write up question 1 again, mostly from memory

--- a/exam_prep/main.tex
+++ b/exam_prep/main.tex
@@ -42,6 +42,7 @@
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}%
 \DeclarePairedDelimiter\norm{\lVert}{\rVert}%
+\DeclareMathOperator{\Span}{span}
 
 \newtheorem{theorem}{Theorem}
 
@@ -52,7 +53,7 @@
 \author{August Femtehjell}
 \date{Spring 2025}
 
-\includeonly{question_5}
+\includeonly{formality, question_2}
 
 \begin{document}
 
