--- a/exam_prep/question_2.tex
+++ b/exam_prep/question_2.tex
@@ -10,6 +10,7 @@ Describe how to perform an estimation of convergence rates.
 \subsection{Short-form answer}
 \input{question_2_short}
 
+\newpage
 \subsection{Long-form answer}
 
 \subsubsection{Weak form of the Poisson equation}
