Start Navier-Stokes

--- a/exam_prep/main.tex
+++ b/exam_prep/main.tex
@@ -43,6 +43,7 @@
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}%
 \DeclarePairedDelimiter\norm{\lVert}{\rVert}%
 \DeclareMathOperator{\Span}{span}
+\DeclarePairedDelimiterX\inp[2]{\langle}{\rangle}{#1, #2}
 
 \newtheorem{theorem}{Theorem}
 
@@ -53,7 +54,7 @@
 \author{August Femtehjell}
 \date{Spring 2025}
 
-\includeonly{formality, question_3}
+% \includeonly{formality, question_5}
 
 \begin{document}
 
