--- a/exam_prep/question_2_short.tex
+++ b/exam_prep/question_2_short.tex
@@ -40,7 +40,7 @@ We firstly have
 \begin{equation}
     a(u, v) = (\kappa \nabla u, \nabla v)_{L^2} \leq \kappa_{\max} \abs{u}_1 \abs{v}_1 \leq \kappa_{\max} \norm{u}_1 \norm{v}_1,
 \end{equation}
-where we've used the fact that $\kappa$ is bounded and the Cauchy--Schwarz inequality.
+where we've used the fact that $\kappa$ is bounded and the Cauchy--Schwarz inequality. % chktex 8
 
 Next, we have
 \begin{equation}
