--- a/exam_prep/main.tex
+++ b/exam_prep/main.tex
@@ -44,6 +44,8 @@
 \DeclarePairedDelimiter\norm{\lVert}{\rVert}%
 \DeclareMathOperator{\Span}{span}
 \DeclarePairedDelimiterX\inp[2]{\langle}{\rangle}{#1, #2}
+\DeclareMathOperator*{\argmax}{arg\,max}
+\DeclareMathOperator*{\argmin}{arg\,min}
 
 \newtheorem{theorem}{Theorem}
 
@@ -54,7 +56,7 @@
 \author{August Femtehjell}
 \date{Spring 2025}
 
-% \includeonly{formality, question_5}
+% \includeonly{formality, question_6}
 
 \begin{document}
 
@@ -78,5 +80,7 @@
 \include{question_4}
 
 \include{question_5}
+
+\include{question_6}
 
 \end{document}
